--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ notifications:
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 #  - julia -e 'Pkg.clone(pwd()); Pkg.build("Crystal"); Pkg.test("Crystal"; coverage=true)'
+after_success:
+  - julia -e 'Pkg.add("Documenter")'
+  - julia -e 'cd(Pkg.dir("Crystals")); include(joinpath("docs", "make.jl"))'
