update travis to julia v0.6

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,12 @@ os:
   - linux
   - osx
 julia:
-  - release
+  - 0.6
+  - nightly
+matrix:
+  allow_failures:
+  - julia: nightly
+
 notifications:
   email: false
 script:
